[project]
name = "pushbullet-calend"
version = "0.1.0"
description = "Pushbullet SMS reminders driven by Google Calendar event descriptions"
readme = "README.md"
authors = [
    { name = "toonarmycaptain", email = "toonarmycaptain@hotmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
